@startuml
'https://plantuml.com/class-diagram

'Backend'
abstract class Figure implements Movable, Reachable {

}

interface Movable {
    +void move(int dx, int dy)
}

interface Reachable {
    +isReachable(Point p)
    +isReachable(Rectangle section)
}

class Point implements Movable {
    -int x, y
    +int getX()
    +int getY()
    +void move(int dx, int dy)
}

class Circle extends Ellipse
class Ellipse extends Figure
class Rectangle extends Figure
class Square extends Rectangle



class CanvasState {
    -List<Figure> figures
    -List<Figure> selectedFigures
    +void addFigure(Figure f)
    +void deleteFigure(Figure f)
    +figureBelongs(Figure f, Point eventPoint)
    +void updateFigure(double dx, double dy)
}
'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection

'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml